# harmony-takehome

./: README.md  main.py  pyproject.toml  validate.py
app/adapters/: __init__.py  client_a.py
app/api/v1/: schedule.py
app/models/: __init__.py  models.py
app/scheduler/: __init__.py  kpis.py  solver.py
app/validation/: __init__.py  problem_validator.py
tests/: test_canonical_models.py  test_client_a_adapter.py  test_problem_validator.py  test_schedule_api.py  test_solver.py
